[gd_scene load_steps=9 format=2]

[ext_resource path="res://Misc/Projectiles/hammer0.png" type="Texture" id=1]
[ext_resource path="res://Misc/Projectiles/hammer1.png" type="Texture" id=2]
[ext_resource path="res://Misc/Projectiles/hammer2.png" type="Texture" id=3]
[ext_resource path="res://Misc/Projectiles/hammer3.png" type="Texture" id=4]
[ext_resource path="res://Misc/Projectiles/Hammer.gd" type="Script" id=5]

[sub_resource type="SpriteFrames" id=1]
animations = [ {
"frames": [ ExtResource( 1 ), ExtResource( 2 ), ExtResource( 3 ), ExtResource( 4 ) ],
"loop": true,
"name": "default",
"speed": 10.0
} ]

[sub_resource type="RectangleShape2D" id=2]

[sub_resource type="RectangleShape2D" id=3]

[node name="Hammer" type="KinematicBody2D"]
collision_layer = 0
collision_mask = 0
script = ExtResource( 5 )

[node name="ThrowHammerSprite" type="AnimatedSprite" parent="."]
frames = SubResource( 1 )
frame = 1
playing = true

[node name="CollisionShape2D2" type="CollisionShape2D" parent="."]
scale = Vector2( 0.6, 0.6 )
shape = SubResource( 2 )

[node name="HammerArea2D" type="Area2D" parent="."]
collision_layer = 16
collision_mask = 10

[node name="CollisionShape2D" type="CollisionShape2D" parent="HammerArea2D"]
scale = Vector2( 0.7, 0.7 )
shape = SubResource( 3 )

[node name="DespawnTimer" type="Timer" parent="."]
process_mode = 0
wait_time = 2.0
autostart = true
[connection signal="body_entered" from="HammerArea2D" to="." method="_on_HammerArea2D_body_entered"]
[connection signal="timeout" from="DespawnTimer" to="." method="_on_DespawnTimer_timeout"]
